TAG: qcreports_db-4-2-0-1
DATE: 01/09/2009
STAFF: dbm
CHANGES:
1) Fixed link in qcr.html file to be GXD_Stats.current.rpt (not GXD_Stats.rpt)

TAG: qcreports_db-4-1-3-12
DATE: 12/23/2008
STAFF: lec
CHANGES:
1) TR9428; added mgd/GXD_Stats.py to qcnightly_reports.sh archiving.

TAG: qcreports_db-4-1-3-11
TAG: qcreports_db-4-1-3-10
DATE: 12/18/2008
DATE: 12/23/2008
STAFF: lec
CHANGES:
1) TR9376/MGI_ComprehensiveMarkerSequence.py
   select all primary & secondary ids for fields 11-21

TAG: qcreports_db-4-1-3-9
DATE: 12/16/2008
STAFF: lec
CHANGES:
1) fix SEQ_MarkerAnnotation.sql print error

TAG: qcreports_db-4-1-3-8
DATE: 12/10/2008
STAFF: lec
CHANGES:
1) TR9376/MGI_ComprehensiveMarkerSequence.py;added History Symbols

TAG: qcreports_db-4-1-3-7
DATE: 12/09/2008
STAFF: lec
CHANGES:
1) TR9376/MGI_ComprehensiveMarkerSequence.py;added Synonyms

TAG: qcreports_db-4-1-3-6
DATE: 12/03/2008
STAFF: lec
CHANGES:
1) TR9404/ALL_ESCellStrain.py; removed

TAG: qcreports_db-4-1-3-5
DATE: 12/02/2008
STAFF: lec
CHANGES:
1) TR9357/GXD_ImagesUnused.py

TAG: qcreports_db-4-1-3-4
DATE: 11/25/2008
STAFF: lec
CHANGES:
1) TR9391/GXD_SpecNoAge.sql; change "mgiID" from Marker to Assay

TAG: qcreports_db-4-1-3-3
DATE: 11/25/2008
STAFF: lec
CHANGES:
1) GXD_SpecNoAge.sql; fix _MGIType_key = 2 error (should be 1 for references)

TAG: qcreports_db-4-1-3-2
DATE: 11/20/2008
STAFF: lec
CHANGES:
1) TR9376/MGI_ComprehensiveMarkerSequence.py

TAG: qcreports_db-4-1-3-1
DATE: 11/19/2008
STAFF: lec
CHANGES:
1) TR9365/GXD_Stats.py

TAG: qcreports_db-4-1-2-6
DATE: 10/28/2008
STAFF: lec
CHANGES:
1) TR9349/GXD_Triage.sql, GXD_EarlyEmbPapers.py, GXD_OneGenePapers.py

TAG: qcreports_db-4-1-2-5
DATE: 10/28/2008
STAFF: lec
CHANGES:
1) add TR9322 to qcr.html

TAG: qcreports_db-4-1-2-4
DATE: 10/23/2008
STAFF: lec
CHANGES:
1) TR9340/NCBI Genes with no NCBI Gene Model Association/MRK_NCBInoGeneModel.py

TAG: qcreports_db-4-1-2-3
DATE: 10/21/2008
STAFF: lec
CHANGES: