@@ -76,6 +76,7 @@ be used at times to test reports for <I>future</I> public consumption.)
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_WildType.sql.rpt">Genotypes where Allele 1 is "wild type"</A>
 <LI><A HREF="/data/reports/qcreports_db/output/ALL_Priority.rpt">Alleles that have 5 or more Priority References</A>
 <LI><A HREF="/data/reports/qcreports_db/output/ALL_CellLineProvider.sql.rpt">Mutant ES Cell Line Provider Check</A>
+<LI><A HREF="/data/reports/qcreports_db/output/PHENO_ImageCheck.sql.rpt">Image Check</A>
 <LI><A HREF="http://aretha.jax.org/jax/tbase">TBASE</A>
 </OL>
 
